tests/baselines/reference/classAndInterface1.errors.txt
==== tests/cases/compiler/classAndInterface1.ts (1 errors) ====
    class cli { }
    interface cli { } // error
              ~~~
!!! classAndInterface1.ts(2,11): error TS2000: Duplicate identifier 'cli'. Additional locations:
!!! 	classAndInterface1.ts(1,1)